# streamsense

./: .gitignore  LICENSE  pyproject.toml
eval/datasets/: sample.jsonl
src/streamsense/: classifier.py  schemas.py  source.py
tests/: test_classifier.py
