[project]
name = "streamsense"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["boto3", "pydantic", "langchain-core", "langchain-aws"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamsense"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
